--- a/service_JS/index.html
+++ b/service_JS/index.html
@@ -7,13 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src= "http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
-<script src= "/js/controller/cartController.js"></script>
-<script src= "/js/directives/add-cart.js"></script>
-    <script src= "/js/directives/cancel-cart.js"></script>
-    <script src= "/js/service/service.js"></script>
+<script src= "js/controller/cartController.js"></script>
+<script src= "js/directives/add-cart.js"></script>
+    <script src= "js/directives/cancel-cart.js"></script>
+    <script src= "js/service/service.js"></script>
     
-<script src= "jquery-ui.js"></script>
-
     </head>
 
 <body ng-controller="cartControl" ng-init="cart=[0,0,0,0,0,0,0,0,0]">
